--- a/styles5-4.css
+++ b/styles5-4.css
@@ -6,14 +6,35 @@
     margin: 0;
 }
 
+@font-face {
+  font-family: myFirstFont;
+  src: url(Avocado\ Cake\ Demo.otf);
+}
+
+@font-face {
+  font-family: special;
+  src: url(MADE\ Tommy\ Soft\ Bold\ PERSONAL\ USE.otf);
+}
+
 body {
     background-color: #b6c0d2;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #253559;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 h1 {
-    font-size: 6.5em;
+    font-size: 5.7em;
     padding-top: 2.5vh;
+    font-family: myFirstFont;
+    letter-spacing: 4px;
+    color: #445b89;
+}
+
+h4 {
+  font-family: special;
+  font-size: smaller;
+  letter-spacing: 1.25px;
+  color: #445b89;
 }
 
 p {
@@ -68,6 +89,12 @@ img:hover {
     border-radius: 100%;
 }
 
+.title {
+  font-weight: 600;
+  font-family: special;
+  font-size: 11px;
+}
+
 #menu-2 {
     text-align: right;
 }
@@ -77,6 +104,7 @@ img:hover {
     margin: 1em -3em;
     grid-column: 2;
     justify-content: center;
+    position: relative;
 }
 
 #second {
