--- a/styles5-4.css
+++ b/styles5-4.css
@@ -25,13 +25,13 @@ body {
 h1 {
     font-size: 5.7em;
     padding-top: 2.5vh;
-    font-family: myFirstFont;
+    font-family: myFirstFont, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     letter-spacing: 4px;
     color: #445b89;
 }
 
 h4 {
-  font-family: special;
+  font-family: special, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: smaller;
   letter-spacing: 1.25px;
   color: #445b89;
@@ -91,7 +91,7 @@ img:hover {
 
 .title {
   font-weight: 600;
-  font-family: special;
+  font-family: special, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 11px;
 }
 
