--- a/styles5-4.css
+++ b/styles5-4.css
@@ -24,7 +24,7 @@
 body {
     background-color: #b6c0d2;
     color: #253559;
-    font-family: special2, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 h1 {
