--- a/garden/styles6.css
+++ b/garden/styles6.css
@@ -145,7 +145,9 @@ h1, .flower1, .flowerepi, .lflowers {
     .Rdrest p {
         text-align: center;
     }
-    
+    nav ul li a {
+        font-size: 12px;
+    }
 }
 
 @media (max-width: 520px) {
@@ -169,5 +171,8 @@ h1, .flower1, .flowerepi, .lflowers {
     }
     .flower1 {
         width: 220px;
+    }
+    nav ul li a {
+        font-size: 8.5px;
     }
 }
