--- a/garden/styles6.css
+++ b/garden/styles6.css
@@ -49,18 +49,18 @@ nav ul li a:hover {
     margin: 2.5em auto -1.5em;
     background-image: url(main2.jpg);
     border-radius: 50% 50% 0 0;
-    opacity: 0.8;
+    opacity: 0.7;
     
 }
 
 h1 {
     position: relative;
     top: -1.75em;
-    margin: auto;
+    margin: 0 auto;
     text-align: center;
-    font-size: 9em;
+    font-size: 8em;
     line-height: 0.75em;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: garden, 'Times New Roman', Times, serif;
     color: black;
     letter-spacing: 3px;
     font-weight: 100;
